--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
+
 </head>
 
 <body>
@@ -56,6 +57,7 @@
                                 <li><a href="#events">EVENTS</a></li>
                                 <li><a href="#prev">PREV SPANDAN</a></li>
                                 <li><a href="#core">TEAM</a></li>
+                                <li><a href="./auth.html">LOGIN</a></li>
                             </ul>
                             <!-- flex -->
                         </nav>
@@ -582,6 +584,7 @@
         </footer>
         <!-- site-footer -->
 
+
         <script type='text/javascript' src='js/jquery.js'></script>
         <script type='text/javascript' src='js/masonry.pkgd.min.js'></script>
         <script type='text/javascript' src='js/jquery.collapsible.min.js'></script>
@@ -592,6 +595,8 @@
         <script type='text/javascript' src='js/custom.js'></script>
         <script type='text/javascript' src='js/index.js'></script>
     </div>
+
+    
 </body>
 
 </html>
