--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li><a href="#">HOME</a></li>
                                 <li><a href="#events">EVENTS</a></li>
                                 <li><a href="#prev">PREV SPANDAN</a></li>
-                                <li><a href="#core">TEAM</a></li>
+                                <li><a href="">TEAM</a></li>
                                 <li><a href="./auth.html">LOGIN</a></li>
                             </ul>
                             <!-- flex -->
@@ -582,9 +582,9 @@
                 </div>
             </div>
         </footer>
+
+
         <!-- site-footer -->
-
-
         <script type='text/javascript' src='js/jquery.js'></script>
         <script type='text/javascript' src='js/masonry.pkgd.min.js'></script>
         <script type='text/javascript' src='js/jquery.collapsible.min.js'></script>
@@ -595,8 +595,6 @@
         <script type='text/javascript' src='js/custom.js'></script>
         <script type='text/javascript' src='js/index.js'></script>
     </div>
-
-    
 </body>
 
 </html>
