--- a/auth.html
+++ b/auth.html
@@ -6,32 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Spandan 2023</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h2>Authentication</h2>
-  <div id="firebaseui-auth-container"></div>
+  <div class="center-parent">
+    <div class="card center-child">
+      <img class="card-img-top" style="height: 10rem;object-fit: fill;" src="./images/about-us-header-background.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h4>Authentication</h4>
+        <div id="firebaseui-auth-container"></div>
+      </div>
+    </div>
+  </div>
+
+
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
   <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#config-web-app -->
   <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-auth.js"></script>
 
-  
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDWfHPnmzO1izx_jFIepHCoVQuGevws_04",
-      authDomain: "spandan-c4c19.firebaseapp.com",
-      projectId: "spandan-c4c19",
-      storageBucket: "spandan-c4c19.appspot.com",
-      messagingSenderId: "477956289858",
-      appId: "1:477956289858:web:f54676b7722ad7924d04db",
-      measurementId: "G-Z72CP1FDJJ"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
   <!-- Firebase UI -->
   <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
