--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li><a href="#">HOME</a></li>
                                 <li><a href="#events">EVENTS</a></li>
                                 <li><a href="#prev">PREV SPANDAN</a></li>
-                                <li><a href="">TEAM</a></li>
+                                <li><a href="./form.html">TEAM</a></li>
                                 <li><a href="./auth.html">LOGIN</a></li>
                             </ul>
                             <!-- flex -->
