--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <div class="col-10 col-lg-4">
                         <h1 class="site-branding flex">
                             <a href="#">
-                                <img style="object-fit: cover;border-radius: 50%;height: 50px;width: 50px;"
-                                    src="images/spandan_logo_white.JPG" width="70px" /></a>
+                                <img style="object-fit: cover;border-radius: 10%;height: 40px;width: 60px;"
+                                    src="images/spandan_logo2.jpeg" width="70px" /></a>
 
                         </h1>
                     </div>
